--- a/package.json
+++ b/package.json
@@ -21,5 +21,8 @@
   "bugs": {
     "url": "https://github.com/StevenSJones/expressNoteTakerNinthEdition/issues"
   },
-  "homepage": "https://github.com/StevenSJones/expressNoteTakerNinthEdition#readme"
+  "homepage": "https://github.com/StevenSJones/expressNoteTakerNinthEdition#readme",
+  "devDependencies": {
+    "nodemon": "^2.0.4"
+  }
 }
